# agent-walker

./: .gitattributes  .gitignore  AGENTS.md  BUG-mcp-search-stdout-none.md  CLAUDE.md  COVERAGE-GAPS.md  COVERAGE-PLAN.md  LINTER-SETUP.md  PERF-RESULTS.md  PLAN.md  README.md  RESULTS.md  SPEC.md  TEST-REPORT.md  install.bat  install.sh
.gitea/: seccomp-kcov.json
.gitea/workflows/: ci.yml
.pi/notes/: search-zig-port-handoff.md
ci/: post-coverage-status.py
cpp/: CMakeLists.txt  beacons.cpp  beacons.hpp  common.hpp  cost_walk.hpp  discovery.hpp  events.cpp  events.hpp  json_writer.hpp  main.cpp  pricing.hpp  search.cpp  search.hpp  walker.manifest  walker_roots.hpp
cpp/tests/: unit_tests.cpp
docs/superpowers/plans/: beacon-pairing-fix.md  queue-op-search.md
docs/superpowers/specs/: beacon-pairing-fix.md
go/: beacons.go  beacons_test.go  events.go  events_test.go  go.mod  go.sum  main.go  main_test.go  search.go  search_test.go  walker_roots.go  walker_roots_test.go
mcp/: server.py  test_server.py
rust/: Cargo.toml
rust/src/: beacons.rs  content.rs  events.rs  main.rs  search.rs  transcript.rs  walker_roots.rs
shared/: bench.py  conformance.py  coverage.py  expected.json  generate_beacon_corpus.py  generate_corpus.py  generate_events_corpus.py  generate_perf_corpus.py  generate_search_corpus.py
shared/corpus/01-single-parent/: alpha.jsonl
shared/corpus/02-parent-acompact/: beta.jsonl
shared/corpus/03-malformed-lines/: gamma.jsonl
shared/corpus/05-out-of-range/: delta.jsonl
shared/corpus/06-period-only/: epsilon.jsonl
shared/corpus/07-unknown-model/: zeta.jsonl
shared/corpus/08-web-search/: eta.jsonl
shared/corpus/09-dirty-ladder/: theta.jsonl
shared/corpus/10-iso-variants/: iota.jsonl
shared/corpus/11-byte-edges/: kappa.jsonl
shared/corpus/12-wrong-typed-usage/: wrongu.jsonl
shared/corpus/beacons/: expected_history.json  expected_latest.json
shared/corpus/beacons/clean_lifecycle/: session.jsonl
shared/corpus/beacons/dirty_ladder_latest/: session.jsonl
shared/corpus/beacons/end_int_eta/: session.jsonl
shared/corpus/beacons/end_with_bad_eta/: session.jsonl
shared/corpus/beacons/end_without_eta/: session.jsonl
shared/corpus/beacons/escape_chars/: session.jsonl
shared/corpus/beacons/int_numeric_forms/: session.jsonl
shared/corpus/beacons/malformed/: session.jsonl
shared/corpus/beacons/malformed_bodies/: session.jsonl
shared/corpus/beacons/matcher_edges/: session.jsonl
shared/corpus/beacons/missing_fields/: session.jsonl
shared/corpus/beacons/multiple_in_turn/: session.jsonl
shared/corpus/beacons/optional_drift/: session.jsonl
shared/corpus/beacons/report_without_eta/: session.jsonl
shared/corpus/beacons/subagent_latest/: parent.jsonl
shared/corpus/beacons/two_text_blocks/: session.jsonl
shared/corpus/beacons/wrong_typed_fields/: session.jsonl
shared/corpus/events/: expected_events.json
shared/corpus/multi_root/10-merge-roots/: expected.json
shared/corpus/multi_root/11-unreachable/: expected.json
shared/corpus/multi_root/12-same-slug/: expected.json
shared/corpus/search/01-basic/: expected.json  sid1.jsonl  sid2.jsonl  sid3.jsonl
shared/corpus/search/02-multi-match-per-session/: expected.json  sid1.jsonl
shared/corpus/search/03-bare-string-user-content/: expected.json  sid1.jsonl
shared/corpus/search/04-role-filter/: expected.json  sid1.jsonl
shared/corpus/search/05-tool-block-skip/: expected.json  sid1.jsonl
shared/corpus/search/06-regex/: expected.json  sid1.jsonl
shared/corpus/search/07-case/: expected.json  sid1.jsonl
shared/corpus/search/08-time-window/: expected.json  sid1.jsonl
shared/corpus/search/09-count-only/: expected.json  sid1.jsonl
shared/corpus/search/10-context-zero/: expected.json  sid1.jsonl
shared/corpus/search/11-multibyte-snippet-boundary/: expected.json  sid1.jsonl
shared/corpus/search/12-tool-use-and-result-array/: expected.json  sid_a.jsonl  sid_c.jsonl
shared/corpus/search/13-time-units-and-edges/: expected.json  sid1.jsonl
shared/corpus/search/14-snippet-whitespace-nudge/: expected.json  sid1.jsonl
shared/corpus/search/15a-regex-digit-class/: expected.json  sid1.jsonl
shared/corpus/search/15b-regex-non-digit-class/: expected.json  sid1.jsonl
shared/corpus/search/15c-regex-word-class/: expected.json  sid1.jsonl
shared/corpus/search/15d-regex-non-word-class/: expected.json  sid1.jsonl
shared/corpus/search/15e-regex-default-escape/: expected.json  sid1.jsonl
shared/corpus/search/15f-regex-space-class/: expected.json  (+1 more)
zig/: build.zig
zig/src/: beacons.zig  events.zig  main.zig  search.zig  walker_roots.zig
(+116 files in other folders)
