[package]
name = "walker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "walker"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rayon = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
regex = "1"
memchr = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
